# sit-event-api/src/certificates/dto/create-certificate-template.dto.ts
@@ -1,0 +1,8 @@
+import { IsNotEmpty, IsString, IsUUID } from 'class-validator';
+
+export class CreateCertificateTemplateDto {
+  @IsNotEmpty()
+  @IsString()
+  @IsUUID()
+  eventId: string;
+}
