# sit-event-api/src/certificates/dto/update-certificate-element.dto.ts
@@ -1,0 +1,4 @@
+import { PartialType } from '@nestjs/mapped-types';
+import { CreateCertificateElementDto } from './create-certificate-element.dto';
+
+export class UpdateCertificateElementDto extends PartialType(CreateCertificateElementDto) {}
